# ascii_art_mini_transformer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  UPGRADE_LOG.md  mypy.ini
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  rust_coverage.yml  train_gpu.yml  train_gpu_dispatch.yml
data/: schema.sql
python/: __init__.py  requirements.txt
python/data/: database.py  db.py  figlet_broken_fonts.json  generate_figlet.py  ingest_huggingface.py  quality_pipeline.py  scrape_16colors.py  scrape_asciiart.py  scrape_textfiles.py
python/inference/: __init__.py  cli.py  constraints.py  generate.py  sampler.py
python/model/: __init__.py  positional_encoding.py  tokenizer.py  transformer.py
rust/ascii-gen/: Cargo.toml  build.rs
rust/ascii-gen/src/: lib.rs  main.rs  quantized.rs
rust/ascii-gen/src/inference/: constraints.rs  generate.rs  mod.rs  sampling.rs
rust/ascii-gen/src/model/: attention.rs  config.rs  embedding.rs  layers.rs  mod.rs  transformer.rs
rust/ascii-gen/src/tokenizer/: ascii.rs  mod.rs
rust/ascii-gen/src/weights/: embedded.rs  loader.rs  mod.rs  quantized.rs
rust/ascii-gen/test_data/: config.json  model.safetensors
rust/ascii-gen/test_data/crossval/: config.json  greedy_golden.json  model.safetensors  model_int4.safetensors  model_int8.safetensors  quant_config.json  tokenizer.json  tokenizer_golden.json
rust/ascii-gen/test_data/crossval/golden/: golden_0.json  golden_1.json  golden_2.json  golden_3.json  golden_4.json
rust/ascii-gen/tests/: cross_validation.rs  integration.rs  quality.rs
(+42 files in other folders)
