[package]
name = "ascii-gen"
version = "0.1.0"
edition = "2024"
description = "Tiny transformer for generating ASCII art"
build = "build.rs"

[features]
default = ["external-weights"]
# Embed model weights/config/tokenizer into the binary (single-file deliverable).
embedded-weights = []
# Load weights/config/tokenizer from files on disk.
external-weights = []

[dependencies]
# Tensor ops (pure Rust, no native deps)
candle-core = "0.9.2"
candle-nn = "0.9.2"

# Model loading
safetensors = "0.7.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random sampling
rand = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

[build-dependencies]
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
opt-level = 3
